kubernetes/apps/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      namespace: jellyfin
      labels:
        app: sonarr
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: Dagobah
      containers:
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr:4.0.16
          ports:
            - name: http
              containerPort: 8989
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: sonarr-data
              mountPath: /tv
              subPath: tv
            - name: sonarr-data
              mountPath: /downloads
              subPath: downloads
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: sonarr-data
          persistentVolumeClaim:
            claimName: jellyfin-media
